# sbss

./: .gitignore  LICENSE  README.md  pyproject.toml  sbss.py  setup.py
.github/workflows/: lint.yml  publish.yml  tests.yml
sbss/: __init__.py  sbss.py
sbss/sbss.egg-info/: PKG-INFO  SOURCES.txt
tests/: __init__.py  test_sbss.py
