[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbss"
version = "0.0.6"
description = "Similarity-Based Stratified Splitting Algorithm"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "timothyckl", email = "timothy.ckl@outlook.com" }]
requires-python = ">=3.9"
dependencies = ["numpy>=1.23.5"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest==7.4.3", "scipy", "scikit-learn", "black"]

[project.urls]
Homepage = "https://github.com/timothyckl/similarity-stratified-split"

[tool.setuptools.packages.find]
where = ["."]
include = ["sbss*"]
exclude = ["sbss.egg-info*"]

[tool.black]
line-length = 100
skip-string-normalization = true
